chore: tracking improvements (#141)